...
) =>
  Alert.alert(title, description, [
    ...(!Permissions.canOpenSettings()
      ? []
      : [
          {
            text: "OK",
            style: "cancel",
            onPress: () => Permissions.openSettings()
          }
        ]),
    {
      text: "Not interested"
...
                      "mailto:apps+hide-the-notch@moox.io?subject=Support request"
                    )
                  }
                >
                  <Text style={styles.helpText}>
                    Support email:{" "}
                    <Text style={styles.link}>apps+hide-the-notch@moox.io</Text>
                  </Text>
                </TouchableHighlight>
              </View>
            </View>
          )}
          {state.edit && (
...
